--- a/.github/workflows/firebase-hosting-deploy.yml
+++ b/.github/workflows/firebase-hosting-deploy.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build_and-deploy:
+  build_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,6 +21,4 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: Deploy to Firebase Hosting
-        env:
-          FIREBASE_TOKEN: 1//03qkR9YGbrANQCgYIARAAGAMSNwF-L9IrA7UE3iKvTKOYUnQ53DcDk4dRFrtW_DWpe-nwj52JPIf_cpMaTlWPlUT07r9XzCQy6Q0
-        run: firebase deploy --only hosting --token $FIREBASE_TOKEN
+        run: firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }}
