--- a/.github/workflows/firebase-hosting-deploy.yml
+++ b/.github/workflows/firebase-hosting-deploy.yml
@@ -15,10 +15,18 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'  # ✅ Updated to Node.js 18 for Firebase CLI compatibility
+          node-version: '18'
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
+      # Write the Firebase service account key to a file on the runner
+      - name: Set up service account credentials
+        run: |
+          echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_JSON }}" > ${HOME}/gcloud-service-key.json
+
+      # Deploy using the service account key
       - name: Deploy to Firebase Hosting
-        run: firebase deploy --only hosting --project e-commerce-pk --token ${{ secrets.FIREBASE_TOKEN }}
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: "${HOME}/gcloud-service-key.json"
+        run: firebase deploy --only hosting --project e-commerce-pk
