--- a/firebase.json
+++ b/firebase.json
@@ -10,6 +10,10 @@
       {
         "source": "/admin/**",
         "destination": "/admin/admin.html"
+      },
+      {
+        "source": "**",
+        "destination": "/index.html"
       }
     ]
   }
