--- a/firebase.json
+++ b/firebase.json
@@ -8,12 +8,12 @@
     ],
     "rewrites": [
       {
-        "source": "/admin/**",
-        "destination": "/admin/admin_dashboard.html"
+        "source": "/admin",
+        "destination": "/admin/admin.html"
       },
       {
-        "source": "**",
-        "destination": "/index.html"
+        "source": "/admin/**",
+        "destination": "/admin/admin.html"
       }
     ]
   }
